[desktop] build.gradle --enable-native-access=ALL-UNNAMED gets rid of warning doing System.load
TODO: Gotta add this most likely on the windows and macos launcher scripts